--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,7 +41,6 @@ dependencies:
   firebase_core: ^2.10.0
   cloud_firestore: 
   flutter_bloc: ^8.1.2
-  # connectivity_plus: ^3.0.6
   url_launcher: ^6.1.10
   intl: ^0.18.1
   internet_connection_checker_plus: ^1.0.1
@@ -96,12 +95,11 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
+  fonts:
+    - family: Cairo
+      fonts:
+        - asset: fonts/Cairo.ttf
+          
   #   - family: Trajan Pro
   #     fonts:
   #       - asset: fonts/TrajanPro.ttf
