--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   intl: ^0.18.1
   internet_connection_checker_plus: ^1.0.1
   shared_preferences: ^2.1.1
+  firebase_messaging: ^14.6.1
+  http: ^0.13.6
   
 
 
