--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,12 +43,12 @@ dependencies:
   flutter_bloc: ^8.1.2
   url_launcher: ^6.1.10
   intl: ^0.18.1
-  internet_connection_checker_plus: ^1.0.1
+  internet_connection_checker_plus: ^1.0.0
   shared_preferences: ^2.1.1
   firebase_messaging: ^14.6.1
   flutter_local_notifications:
   http: ^0.13.6
-  
+  connectivity_plus: ^2.0.0
 
 
 
@@ -56,7 +56,6 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_launcher_icons: "^0.9.2"
   flutter_lints: ^2.0.0
 
 
