edit dashboard and add sshimmer and giveaway page

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,38 +28,31 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  animated_splash_screen: ^1.3.0
+  cached_network_image: ^3.2.3
+  cloud_firestore: null
+  connectivity_plus: ^2.0.0
+  cupertino_icons: ^1.0.2
+  firebase_auth: ^4.8.0
+  firebase_core: ^2.10.0
+  firebase_messaging: ^14.6.1
   flutter:
     sdk: flutter
-
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
-  animated_splash_screen: ^1.3.0
-  responsive_sizer: ^3.1.1
-  table_calendar: ^3.0.9
-  firebase_core: ^2.10.0
-  cloud_firestore: 
   flutter_bloc: ^8.1.2
-  url_launcher: ^6.1.10
-  intl: ^0.18.1
-  internet_connection_checker_plus: ^1.0.0
-  shared_preferences: ^2.1.1
-  firebase_messaging: ^14.6.1
-  flutter_local_notifications:
+  flutter_local_notifications: null
   http: ^0.13.6
-  connectivity_plus: ^2.0.0
-  cached_network_image: ^3.2.3
-  firebase_auth: ^4.8.0
-
-
-
+  internet_connection_checker_plus: ^1.0.0
+  intl: ^0.18.1
+  responsive_sizer: ^3.1.1
+  shared_preferences: ^2.1.1
+  shimmer: ^3.0.0
+  table_calendar: ^3.0.9
+  url_launcher: ^6.1.10
 
 dev_dependencies:
+  flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
-  flutter_lints: ^2.0.0
-
 
 flutter_icons:
   android: "launcher_icon"
@@ -70,11 +63,9 @@ flutter_icons:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
-
 # The following section is specific to Flutter packages.
 flutter:
 
@@ -87,13 +78,10 @@ flutter:
   assets:
     - assets/
   #   - images/a_dot_ham.jpeg
-
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
-
   # For details regarding adding assets from package dependencies, see
   # https://flutter.dev/assets-and-images/#from-packages
-
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
   # "family" key with the font family name, and a "fonts" key with a
@@ -103,7 +91,6 @@ flutter:
     - family: Cairo
       fonts:
         - asset: fonts/Cairo.ttf
-          
   #   - family: Trajan Pro
   #     fonts:
   #       - asset: fonts/TrajanPro.ttf
