--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -74,7 +74,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/
+    - assets/images/
   #   - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
@@ -88,7 +88,7 @@ flutter:
   fonts:
     - family: Cairo
       fonts:
-        - asset: fonts/Cairo.ttf
+        - asset: assets/fonts/Cairo.ttf
   #   - family: Trajan Pro
   #     fonts:
   #       - asset: fonts/TrajanPro.ttf
