--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
     sdk: flutter
   flutter_bloc: ^8.1.2
   flutter_local_notifications: null
+  get_it: ^7.6.4
   http: ^0.13.6
   internet_connection_checker_plus: ^1.0.0
   intl: ^0.18.1
