--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,10 +40,12 @@ dependencies:
     sdk: flutter
   flutter_bloc: ^8.1.2
   flutter_local_notifications: null
+  font_awesome_icon_class: ^0.0.6
   get_it: ^7.6.4
   http: ^0.13.6
   internet_connection_checker_plus: ^1.0.0
   intl: ^0.18.1
+  photo_view: ^0.14.0
   shared_preferences: ^2.1.1
   table_calendar: ^3.0.9
   url_launcher: ^6.1.10
